# doge-savings-scraper

./: README.md  pyproject.toml
.github/workflows/: scrape.yml
data/: doge_savings_cfpb.csv  doge_savings_cfpb_2025-03-08__01-41-45.csv  doge_savings_cfpb_2025-03-09__01-48-17.csv  doge_savings_cfpb_2025-03-10__01-47-27.csv  doge_savings_cfpb_2025-03-14__01-59-17.csv  doge_savings_cfpb_2025-03-16__02-11-03.csv  doge_savings_cfpb_2025-03-18__02-07-39.csv  doge_savings_cfpb_2025-03-19__02-12-46.csv  doge_savings_cfpb_2025-03-20__02-08-38.csv  doge_savings_cfpb_2025-03-21__02-04-23.csv  doge_savings_cfpb_2025-03-22__02-02-21.csv  doge_savings_cfpb_2025-03-24__02-16-41.csv  doge_savings_cfpb_2025-03-25__02-19-21.csv
doge_savings_scraper/: __init__.py  cli.py  diff.py  scrape.py
